--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 </div>
                 <div class="col-12 col-md-5">
                     <a href="./profile/login/login.html">Login</a>
-                    <a href="./profile/register/register.html">register</a>
-                    <a href="./post/create/index.html">home</a>
-                    <a href="./profile/profile.html">profile</a>
+                    <a href="./profile/register/register.html">Register</a>
+                    <!-- <a href="./post/create/index.html">home</a>
+                    <a href="./profile/profile.html">profile</a> -->
                 </div>
             </div>
         </div>  
