--- a/profile/edit/index.html
+++ b/profile/edit/index.html
@@ -80,14 +80,18 @@
       <div class="container-fluid" id="">
         <div class="row justify-content-center">
           <div class="col-12 col-md-6 mt-5">
-            <form action="" id="editProfile">
-              <h2></h2>
-              <h2></h2>
+            <form action="" id="updateProfile">
+              <!-- <h2>Name: <span id="profileName"></span></h2>
+              <h2>Email: <span id="profileEmail"> </span></h2> -->
               <div class="form-group mb-3">
                 <label for="">Banner</label>
                 <input class="form-control" type="url" name="Banner" />
               </div>
               <div class="form-group mb-3">
+                <label for="avatar">avatar</label>
+                <input class="form-control" type="url" name="avatar" />
+              </div>
+              <!-- <div class="form-group mb-3">
                 <label for="">Avatar</label>
                 <textarea
                   class="form-control"
@@ -96,7 +100,7 @@
                   rows="10"
                   name="avatar"
                 ></textarea>
-              </div>
+              </div> -->
               <button class="btn btn-success">Update Profile</button>
             </form>
           </div>
@@ -120,7 +124,7 @@
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../../src/scss/js/index.mjs" type="module"></script>
     <script
-      src="../../src/scss/js/handlers/createPost.mjs"
+      src="../../src/scss/js/handlers/updateProfile.mjs"
       type="module"
     ></script>
   </body>
