--- a/profile/edit/index.html
+++ b/profile/edit/index.html
@@ -125,6 +125,7 @@
     <script src="../../src/scss/js/index.mjs" type="module"></script>
     <script
       src="../../src/scss/js/handlers/updateProfile.mjs"
+      src="../../src/scss/js/handlers/updateProfile.mjs"
       type="module"
     ></script>
   </body>
