--- a/profile/login/login.html
+++ b/profile/login/login.html
@@ -90,6 +90,7 @@
     </footer>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../../src/scss/js/index.mjs" type="module"></script>
+    <script src="../../src/scss/js/index.mjs" type="module"></script>
     <!-- <script src="../../src/scss/js/api/auth/login.mjs" type="module"></script> -->
   </body>
 </html>
