rearranged file and folder

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -339,10 +339,10 @@
       </ul>
     </footer>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../src/scss/js/api/posts/profile.mjs" type="module"></script>
+    <script src="../src/scss/js/api/profile/post/index.mjs" type="module"></script>
     <script src="../src/scss/js/api/posts/getRegisteredProfiles.mjs" type="module"></script>
     <!-- <script src="../src/scss/js/views/posts/displayAllRegisteredProfiles.mjs" type="module"></script> -->
-    <script src="../src/scss/js/search/index.mjs" type="module"></script>
+    <!-- <script src="../src/scss/js/search/index.mjs" type="module"></script> -->
 
 
   </body>
