--- a/profile/edit/index.html
+++ b/profile/edit/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Explore creative works from entire world and share yours."
     />
-    <title>Bcreative | Edit Profile</title>
+    <title>Bcreative | Update Profile</title>
     <script
       src="https://kit.fontawesome.com/bdb94ef7c7.js"
       crossorigin="anonymous"
@@ -22,9 +22,7 @@
       class="navbar navbar-expand-md bg-white d-flex justify-content-center align-items-center fixed-top shadow"
     >
       <div class="container-fluid">
-        <a
-          class="navbar-brand text-primary fw-bold"
-          href="../profile/index.html"
+        <a class="navbar-brand text-primary fw-bold" href="../../index.html"
           >Bcreative</a
         >
         <button
@@ -59,19 +57,6 @@
               >
             </li>
           </ul>
-          <!-- search field start -->
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2 border border-primary"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-primary text-white" type="submit">
-              Search
-            </button>
-          </form>
-          <!-- search field end -->
         </div>
       </div>
     </nav>
@@ -81,26 +66,14 @@
         <div class="row justify-content-center">
           <div class="col-12 col-md-6 mt-5">
             <form action="" id="updateProfile">
-              <!-- <h2>Name: <span id="profileName"></span></h2>
-              <h2>Email: <span id="profileEmail"> </span></h2> -->
               <div class="form-group mb-3">
-                <label for="">Banner</label>
-                <input class="form-control" type="url" name="Banner" />
+                <label for="banner">Banner</label>
+                <input class="form-control" type="url" name="banner" />
               </div>
               <div class="form-group mb-3">
                 <label for="avatar">avatar</label>
                 <input class="form-control" type="url" name="avatar" />
               </div>
-              <!-- <div class="form-group mb-3">
-                <label for="">Avatar</label>
-                <textarea
-                  class="form-control"
-                  id=""
-                  cols="30"
-                  rows="10"
-                  name="avatar"
-                ></textarea>
-              </div> -->
               <button class="btn btn-success">Update Profile</button>
             </form>
           </div>
