logo linked to home page

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -19,7 +19,7 @@
       class="navbar navbar-expand-md bg-white d-flex justify-content-center align-items-center fixed-top shadow"
     >
       <div class="container-fluid">
-        <a class="navbar-brand text-primary fw-bold" href="../index.html"
+        <a class="navbar-brand text-primary fw-bold" href="../post/create/index.html"
           >Bcreative</a
         >
         <button
@@ -59,17 +59,6 @@
               >
             </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2 border border-primary"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-primary text-white" type="submit">
-              Search
-            </button>
-          </form>
         </div>
       </div>
     </nav>
@@ -345,10 +334,10 @@
       </ul>
     </footer>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <script
+    <script
       src="../src/scss/js/api/profile/post/index.mjs"
       type="module"
-    ></script> -->
+    ></script>
     <script
       src="../src/scss/js/api/profile/profileDetails/index.mjs"
       type="module"
