logout function created

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -55,6 +55,7 @@
               <a
                 class="nav-link text-primary text-danger"
                 href="./profile/index.html"
+                id = "logOut"
                 >Log out</a
               >
             </li>
