--- a/profile/profile.html
+++ b/profile/profile.html
@@ -40,7 +40,7 @@
               <a
                 class="nav-link text-primary"
                 aria-current="page"
-                href="../post/create/index.html"
+                href="../post/index.html"
                 >Home</a
               >
             </li>
@@ -263,7 +263,7 @@
             <!--  My posts -->
             <div class="bg-white p-4 rounded shadow mt-3">
               <!-- Search MyPost -->
-              <h2>Search Post</h2>
+              <!-- <h2>Search Post</h2>
               <form id="searchForm" class="d-flex">
                 <div class="form-group mb-3">
                   <input
@@ -275,10 +275,9 @@
                   />
                 </div>
                 <button class="btn btn-success">Search</button>
-              </form>
+              </form> -->
 
               <!-- All  mY posts -->
-
               <h2>All my posts</h2>
               <div class="" id="postCardsContainer"></div>
               <!--  author -->
@@ -335,16 +334,20 @@
       </ul>
     </footer>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script
+    <!-- <script
       src="../src/scss/js/api/profile/post/index.mjs"
       type="module"
-    ></script>
+    ></script> -->
     <script
-      src="../src/scss/js/api/profile/profileDetails/index.mjs"
+    src="../dist/js/api/profile/post/index.mjs"
+    type="module"
+  ></script>
+    <script
+      src="../dist/js/api/profile/profileDetails/index.mjs"
       type="module"
     ></script>
     <script
-      src="../src/scss/js/api/posts/getRegisteredProfiles.mjs"
+      src="../dist/js/api/posts/getRegisteredProfiles.mjs"
       type="module"
     ></script>
     <!-- <script src="../src/scss/js/views/posts/displayAllRegisteredProfiles.mjs" type="module"></script> -->
