--- a/profile/register/register.html
+++ b/profile/register/register.html
@@ -109,6 +109,7 @@
       </ul>
     </footer>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../../src/scss/js/index.mjs" type="module"></script>
+    <!-- <script src="../../src/scss/js/index.mjs" type="module"></script> -->
+    <script src="../../dist/js/index.mjs" type="module"></script>
   </body>
 </html>
