--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             </div>
         </div>  
     </main>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./src/scss/js/index.mjs" type="module"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./dist/js/index.mjs" type="module"></script>
   </body>
 </html>
+
