changed to correct path

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -19,9 +19,7 @@
       class="navbar navbar-expand-md bg-white d-flex justify-content-center align-items-center fixed-top shadow"
     >
       <div class="container-fluid">
-        <a
-          class="navbar-brand text-primary fw-bold"
-          href="../post/create/index.html"
+        <a class="navbar-brand text-primary fw-bold" href="../post/index.html"
           >Bcreative</a
         >
         <button
