--- a/profile/profile.html
+++ b/profile/profile.html
@@ -52,10 +52,7 @@
             </li>
             <!-- log -->
             <li class="nav-item">
-              <a
-                class="nav-link text-primary text-danger"
-                href="./profile/index.html"
-                id="logOut"
+              <a class="nav-link text-primary text-danger" href="" id="logOut"
                 >Log out</a
               >
             </li>
@@ -169,6 +166,7 @@
     ></script> -->
     <!-- <script src="../src/scss/js/views/posts/displayAllRegisteredProfiles.mjs" type="module"></script> -->
     <script src="../dist/js/index.mjs" type="module"></script>
+    <script src="../dist/js/listeners/logOut.mjs" type="module"></script>
     <script
       src="../dist/js/api/profile/profileDetails/index.mjs"
       type="module"
