changed logout link to button

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -52,9 +52,13 @@
             </li>
             <!-- log -->
             <li class="nav-item">
-              <a class="nav-link text-primary text-danger" href="" id="logOut"
-                >Log out</a
+              <button
+                class="nav-link text-primary text-danger"
+                href=""
+                id="logOut"
               >
+                Log out
+              </button>
             </li>
           </ul>
         </div>
@@ -151,22 +155,7 @@
       </ul>
     </footer>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <script
-      src="../src/scss/js/api/profile/post/index.mjs"
-      type="module"
-    ></script> -->
-    <!-- <script src="../dist/js/api/profile/post/index.mjs" type="module"></script>
-    <script
-      src="../dist/js/api/profile/profileDetails/index.mjs"
-      type="module"
-    ></script>
-    <script
-      src="../dist/js/api/posts/getRegisteredProfiles.mjs"
-      type="module"
-    ></script> -->
-    <!-- <script src="../src/scss/js/views/posts/displayAllRegisteredProfiles.mjs" type="module"></script> -->
     <script src="../dist/js/index.mjs" type="module"></script>
-    <script src="../dist/js/listeners/logOut.mjs" type="module"></script>
     <script
       src="../dist/js/api/profile/profileDetails/index.mjs"
       type="module"
