--- a/profile/profile.html
+++ b/profile/profile.html
@@ -13,8 +13,6 @@
     <link rel="stylesheet" href="/dist/css/styles.css" />
   </head>
   <body class="bg-gray">
-    <!-- Top nav -->
-    <!-- nav-->
     <nav
       class="navbar navbar-expand-md bg-white d-flex justify-content-center align-items-center fixed-top shadow"
     >
@@ -35,7 +33,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <!-- home -->
             <li class="nav-item">
               <a
                 class="nav-link text-primary"
@@ -44,19 +41,13 @@
                 >Home</a
               >
             </li>
-            <!-- profile -->
             <li class="nav-item">
               <a class="nav-link active text-primary fw-bold" href="#"
                 >Profile</a
               >
             </li>
-            <!-- log -->
             <li class="nav-item">
-              <button
-                class="nav-link text-primary text-danger"
-                href=""
-                id="logOut"
-              >
+              <button class="nav-link border border-0" href="" id="logOut">
                 Log out
               </button>
             </li>
@@ -67,13 +58,10 @@
     <!-- main -->
     <main class="container-fluid mt-5">
       <div id="UserDetails"></div>
-
-      <!-- hero section-->
       <div
         class="container mb-4 border-bottom border-gray"
         id="profileDetail"
       ></div>
-
       <!-- main body -->
       <div class="container border border-primary">
         <div
@@ -81,60 +69,19 @@
         >
           <!-- Posts -->
           <div class="col-12 col-md-12 col-lg-8">
-            <!--  My posts -->
             <div class="bg-white p-4 rounded shadow mt-3">
-              <!-- Search MyPost -->
-              <!-- <h2>Search Post</h2>
-              <form id="searchForm" class="d-flex">
-                <div class="form-group mb-3">
-                  <input
-                    class="form-control"
-                    type="search"
-                    name="searchBar"
-                    id="searchBar"
-                    placeholder="search"
-                  />
-                </div>
-                <button class="btn btn-success">Search</button>
-              </form> -->
-
-              <!-- All  mY posts -->
               <h2>All my posts</h2>
               <div class="" id="postCardsContainer"></div>
-              <!--  author -->
             </div>
           </div>
-          <!-- Your contact-->
           <div class="col-12 col-md-12 col-lg-4">
             <div class="row d-flex justify-content-center">
               <div
                 class="d-flex justify-content-between align-items-center mt-5 border-bottom border-gray"
               >
-                <p class="text-muted fs-5 m-3">Your Friends</p>
+                <p class="text-muted fs-5 m-3"></p>
                 <div class="" id="registerdUsers"></div>
               </div>
-              <!-- friend name -->
-              <!-- <div class="p-3">
-                <ul
-                  class="d-flex flex-column justify-content-center align-items-center"
-                >
-                  <li
-                    class="d-flex align-items-center dropdown-item rounded my-1 px-0"
-                  >
-                    <div class="p-2">
-                      <img
-                        src=""
-                        alt="avatar"
-                        class="rounded-circle me-2"
-                        style="width: 38px; height: 38px; object-fit: cover"
-                      />
-                    </div>
-                    <div>
-                      <p class="m-0">Alex Robbert</p>
-                    </div>
-                  </li>
-                </ul>
-              </div> -->
             </div>
           </div>
         </div>
