--- a/profile/edit/index.html
+++ b/profile/edit/index.html
@@ -16,8 +16,6 @@
     <link rel="stylesheet" href="/dist/css/styles.css" />
   </head>
   <body class="bg-gray">
-    <!-- Top nav -->
-    <!-- nav-->
     <nav
       class="navbar navbar-expand-md bg-white d-flex justify-content-center align-items-center fixed-top shadow"
     >
@@ -61,18 +59,28 @@
       </div>
     </nav>
     <!-- main -->
-    <main class="flex-grow-1 bg-dark text-light">
+    <main class="flex-grow-1 bg-light text-light">
       <div class="container-fluid" id="">
         <div class="row justify-content-center">
           <div class="col-12 col-md-6 mt-5">
             <form action="" id="updateProfile">
               <div class="form-group mb-3">
                 <label for="banner">Banner</label>
-                <input class="form-control" type="url" name="banner" />
+                <input
+                  class="form-control"
+                  type="url"
+                  name="banner"
+                  placeholder="insert profile banner url"
+                />
               </div>
               <div class="form-group mb-3">
                 <label for="avatar">avatar</label>
-                <input class="form-control" type="url" name="avatar" />
+                <input
+                  class="form-control"
+                  type="url"
+                  name="avatar"
+                  placeholder="insert profile avatar url"
+                />
               </div>
               <button class="btn btn-success">Update Profile</button>
             </form>
