--- a/profile/register/register.html
+++ b/profile/register/register.html
@@ -50,6 +50,7 @@
                   pattern="^[\w]+$"
                   title="The name value must not contain punctuation symbols apart from underscore (_). "
                   autocomplete="username"
+                  placeholder="name_surname"
                 />
               </div>
               <div class="form-group mb-3">
@@ -62,6 +63,7 @@
                   pattern="^[\w\-.]+@(stud.)?noroff.no$"
                   title="The email value must be a valid stud.noroff.no or noroff.no email address."
                   autocomplete="username"
+                  placeholder="name.surname@noroff.no"
                 />
               </div>
               <div class="form-group mb-3">
