--- a/profile/profile.html
+++ b/profile/profile.html
@@ -69,7 +69,7 @@
         >
           <!-- Posts -->
           <div class="col-12 col-md-12 col-lg-8">
-            <div class="bg-white p-4 rounded shadow mt-3">
+            <div class="bg-white p-4 rounded mt-3">
               <h2>All my posts</h2>
               <div class="" id="postCardsContainer"></div>
             </div>
